force-app/main/default/objects/Account/fields/SouOptInNLPartenaires__c.field-meta.xml
<CustomField>
    <fullName>SouOptInNLPartenaires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SouOptInNLPartenaires</label>
    <type>Checkbox</type>
</CustomField>