force-app/main/default/objects/Account/fields/SouOptInNLPartenairesUGC__c.field-meta.xml
<CustomField>
    <fullName>SouOptInNLPartenairesUGC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SouOptInNLPartenairesUGC</label>
    <type>Checkbox</type>
</CustomField>