force-app/main/default/objects/Account/fields/SouOptInNLPartenairesVLO__c.field-meta.xml
<CustomField>
    <fullName>SouOptInNLPartenairesVLO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SouOptInNLPartenairesVLO</label>
    <type>Checkbox</type>
</CustomField>