force-app/main/default/objects/Account/fields/SouOptInNLVLO__c.field-meta.xml
<CustomField>
    <fullName>SouOptInNLVLO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SouOptInNLVLO</label>
    <type>Checkbox</type>
</CustomField>