force-app/main/default/objects/Account/fields/SouOptInSMS__c.field-meta.xml
<CustomField>
    <fullName>SouOptInSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SouOptInSMS</label>
    <type>Checkbox</type>
</CustomField>