force-app/main/default/objects/Account/fields/StatutParrain__c.field-meta.xml
<CustomField>
    <fullName>StatutParrain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statut parrain</label>
    <type>Checkbox</type>
</CustomField>