force-app/main/default/objects/Account/fields/StatutParraine__c.field-meta.xml
<CustomField>
    <fullName>StatutParraine__c</fullName>
    <label>Statut parrainé</label>
    <length>50</length>
    <type>Text</type>
</CustomField>