force-app/main/default/objects/Account/fields/TECH_AnonymizedName__c.field-meta.xml
<CustomField>
    <fullName>TECH_AnonymizedName__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>TECH_AnonymizedName</label>
    <type>AutoNumber</type>
</CustomField>