force-app/main/default/objects/Account/fields/TECH_Code_retour_RCU__c.field-meta.xml
<CustomField>
    <fullName>TECH_Code_retour_RCU__c</fullName>
    <label>Code retour RCU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>