force-app/main/default/objects/Account/fields/TECH_ConsommeSemaineActive__c.field-meta.xml
<CustomField>
    <fullName>TECH_ConsommeSemaineActive__c</fullName>
    <label>TECH_ConsommeSemaineActive</label>
    <length>10</length>
    <type>Text</type>
</CustomField>