force-app/main/default/objects/Account/fields/tech_iban__c.field-meta.xml
<CustomField>
    <fullName>tech_iban__c</fullName>
    <label>tech_iban</label>
    <length>50</length>
    <type>Text</type>
</CustomField>