force-app/main/default/objects/Account/fields/Tech_IdMonCompte__c.field-meta.xml
<CustomField>
    <fullName>Tech_IdMonCompte__c</fullName>
    <externalId>true</externalId>
    <label>Tech Id MonCompte</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>