force-app/main/default/objects/Account/fields/TECH_idTwitter__c.field-meta.xml
<CustomField>
    <fullName>TECH_idTwitter__c</fullName>
    <label>TECH_idTwitter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>