force-app/main/default/objects/Account/fields/TECH_Message_retour_RCU__c.field-meta.xml
<CustomField>
    <fullName>TECH_Message_retour_RCU__c</fullName>
    <label>Message retour RCU</label>
    <length>250</length>
    <type>Text</type>
</CustomField>