force-app/main/default/objects/Account/fields/TECH_OffreMoment__c.field-meta.xml
<CustomField>
    <fullName>TECH_OffreMoment__c</fullName>
    <label>TECH_Offre du moment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>