force-app/main/default/objects/Account/fields/tech_payeur_ville__c.field-meta.xml
<CustomField>
    <fullName>tech_payeur_ville__c</fullName>
    <formula>Payeur__r.Ville__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_payeur_ville</label>
    <type>Text</type>
</CustomField>