force-app/main/default/objects/Account/fields/tech_rum__c.field-meta.xml
<CustomField>
    <fullName>tech_rum__c</fullName>
    <label>tech_rum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>