force-app/main/default/objects/Account/fields/TelephoneBureau__c.field-meta.xml
<CustomField>
    <fullName>TelephoneBureau__c</fullName>
    <label>Téléphone bureau</label>
    <type>Phone</type>
</CustomField>