force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact de test</label>
    <type>Checkbox</type>
</CustomField>