force-app/main/default/objects/Account/fields/test_indexed__c.field-meta.xml
<CustomField>
    <fullName>test_indexed__c</fullName>
    <label>test indexed</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>