force-app/main/default/objects/Account/fields/TglMntTotalDepense6Mois__c.field-meta.xml
<CustomField>
    <fullName>TglMntTotalDepense6Mois__c</fullName>
    <label>Mont dép 6 DM (bill+conf+form+v.annex)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>