force-app/main/default/objects/Account/fields/TglMntTotalDepense__c.field-meta.xml
<CustomField>
    <fullName>TglMntTotalDepense__c</fullName>
    <label>Mont tot dép (bill+conf+form+v.annex)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>