force-app/main/default/objects/Account/fields/TglMntTotalDepenseLunettes12Mois__c.field-meta.xml
<CustomField>
    <fullName>TglMntTotalDepenseLunettes12Mois__c</fullName>
    <label>Mont tot 12 DM lunettes (ventes annexes)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>