force-app/main/default/objects/Account/fields/TglMntTotalDepenseLunettes6Mois__c.field-meta.xml
<CustomField>
    <fullName>TglMntTotalDepenseLunettes6Mois__c</fullName>
    <label>Mont tot 6 DM lunettes (ventes annexes)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>