force-app/main/default/objects/Account/fields/TglMntTotalDepenseParking3Mois__c.field-meta.xml
<CustomField>
    <fullName>TglMntTotalDepenseParking3Mois__c</fullName>
    <label>Mont tot 3 DM parking (ventes annexes)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>