force-app/main/default/objects/Account/fields/Tr5CaFormules5P5sur7a12Mois__c.field-meta.xml
<CustomField>
    <fullName>Tr5CaFormules5P5sur7a12Mois__c</fullName>
    <label>CA achat formules 5 p 5/7 sur les 12 DM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>