force-app/main/default/objects/Account/fields/Tr5CaTotal5sur7__c.field-meta.xml
<CustomField>
    <fullName>Tr5CaTotal5sur7__c</fullName>
    <label>CA total formules 5 places 5/7</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>