force-app/main/default/objects/Account/fields/Tr5CaTotal7sur7__c.field-meta.xml
<CustomField>
    <fullName>Tr5CaTotal7sur7__c</fullName>
    <label>CA total formules 5 places 7/7</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>