force-app/main/default/objects/Account/fields/Tr5DateDernierAchat5P5sur7__c.field-meta.xml
<CustomField>
    <fullName>Tr5DateDernierAchat5P5sur7__c</fullName>
    <label>Date du der achat form 5 places 5j/7</label>
    <type>DateTime</type>
</CustomField>