force-app/main/default/objects/Account/fields/Tr5DateFinValiditePlaces5sur7__c.field-meta.xml
<CustomField>
    <fullName>Tr5DateFinValiditePlaces5sur7__c</fullName>
    <label>Date fin val des p 5/7 des form chargées</label>
    <type>DateTime</type>
</CustomField>