force-app/main/default/objects/Account/fields/Tr5DateFinValiditePlaces7sur7__c.field-meta.xml
<CustomField>
    <fullName>Tr5DateFinValiditePlaces7sur7__c</fullName>
    <label>Date fin val des p 7/7 des form chargées</label>
    <type>DateTime</type>
</CustomField>