force-app/main/default/objects/Account/fields/Tr5Nbr7sur7RestNonPerim__c.field-meta.xml
<CustomField>
    <fullName>Tr5Nbr7sur7RestNonPerim__c</fullName>
    <label>Nbr de places 7/7 restantes non périmées</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>