force-app/main/default/objects/Account/fields/Tr5NbrFormules5P12mois__c.field-meta.xml
<CustomField>
    <fullName>Tr5NbrFormules5P12mois__c</fullName>
    <label>Nbr de formules 5 places achetées 12 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>