force-app/main/default/objects/Account/fields/Tr5NbrFormules5p5sur7a3Mois__c.field-meta.xml
<CustomField>
    <fullName>Tr5NbrFormules5p5sur7a3Mois__c</fullName>
    <label>Nbr de formules 5 p 5/7 sur les 3 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>