force-app/main/default/objects/Account/fields/Tr5NbrMoyPlacesFormTrans6Mois__c.field-meta.xml
<CustomField>
    <fullName>Tr5NbrMoyPlacesFormTrans6Mois__c</fullName>
    <label>Nbr moy pl form util par trans 6 DM</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>