force-app/main/default/objects/Account/fields/Tr5NbrPlacesPerduesPerim12Mois__c.field-meta.xml
<CustomField>
    <fullName>Tr5NbrPlacesPerduesPerim12Mois__c</fullName>
    <label>Nbr de places perd périm sur les 12 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>