force-app/main/default/objects/Account/fields/Tr5NbrPlacesPerduesPerim3Mois__c.field-meta.xml
<CustomField>
    <fullName>Tr5NbrPlacesPerduesPerim3Mois__c</fullName>
    <label>Nbr de places perd périmées sur les 3 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>