force-app/main/default/objects/Account/fields/TrbAcheteurBillet12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbAcheteurBillet12Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acheteur billetterie sur les 12 DM</label>
    <type>Checkbox</type>
</CustomField>