force-app/main/default/objects/Account/fields/TrbAcheteurBillet3Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbAcheteurBillet3Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acheteur billetterie sur les 3 DM</label>
    <type>Checkbox</type>
</CustomField>