force-app/main/default/objects/Account/fields/TrbAcheteurBillet6Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbAcheteurBillet6Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acheteur billetterie sur les 6 DM</label>
    <type>Checkbox</type>
</CustomField>