force-app/main/default/objects/Account/fields/TrbCaBillet3Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbCaBillet3Mois__c</fullName>
    <label>CA achat bill 3 DM (hors réservation)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>