force-app/main/default/objects/Account/fields/TrbCaBilletHorsResa12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbCaBilletHorsResa12Mois__c</fullName>
    <label>CA Achat bill hors résa sur 12 DM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>