force-app/main/default/objects/Account/fields/TrbCaBilletHorsResa3Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbCaBilletHorsResa3Mois__c</fullName>
    <label>CA Achat bill hors résa sur 3 DM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>