force-app/main/default/objects/Account/fields/TrbCaBilletHorsResa6Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbCaBilletHorsResa6Mois__c</fullName>
    <label>CA Achat bill hors résa sur 6 DM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>