force-app/main/default/objects/Account/fields/TrbCaBilletHorsResaTotal__c.field-meta.xml
<CustomField>
    <fullName>TrbCaBilletHorsResaTotal__c</fullName>
    <label>CA Achat bille hors résa dep entrée base</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>