force-app/main/default/objects/Account/fields/TrbCaBilletTotal__c.field-meta.xml
<CustomField>
    <fullName>TrbCaBilletTotal__c</fullName>
    <label>CA achat bill total depuis entrée en bas</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>