force-app/main/default/objects/Account/fields/TrbCaDernierPanier__c.field-meta.xml
<CustomField>
    <fullName>TrbCaDernierPanier__c</fullName>
    <label>Montant dernier panier billetterie en €</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>