force-app/main/default/objects/Account/fields/TrbDateDernAchatBillet__c.field-meta.xml
<CustomField>
    <fullName>TrbDateDernAchatBillet__c</fullName>
    <label>Date dernier achat billetterie</label>
    <type>DateTime</type>
</CustomField>