force-app/main/default/objects/Account/fields/TrbDatePremierAchat__c.field-meta.xml
<CustomField>
    <fullName>TrbDatePremierAchat__c</fullName>
    <label>Date premier achat billetterie</label>
    <type>DateTime</type>
</CustomField>