force-app/main/default/objects/Account/fields/TrbEnLigneSup50Tr12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbEnLigneSup50Tr12Mois__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trb &gt; 50% du total des trb des 12 DM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>