force-app/main/default/objects/Account/fields/TrbNbrFilms3D6Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbNbrFilms3D6Mois__c</fullName>
    <label>Nombre de films achetés 3D 6 DM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>