force-app/main/default/objects/Account/fields/TrbNbrMoyenPlacePanier12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbNbrMoyenPlacePanier12Mois__c</fullName>
    <label>Nombre moyen de places par panier 12 DM</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>