force-app/main/default/objects/Account/fields/TrbNbrPlaceAchetees12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbNbrPlaceAchetees12Mois__c</fullName>
    <label>Nbr places achetées 12 DM (hors réser)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>