force-app/main/default/objects/Account/fields/TrbNbrPlaceAchetees3Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbNbrPlaceAchetees3Mois__c</fullName>
    <label>NNbr places achetées 3 DM (hors réser)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>