force-app/main/default/objects/Account/fields/TrbNbrPlacesAcheteesHorsResa12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbNbrPlacesAcheteesHorsResa12Mois__c</fullName>
    <label>Nbr places achetées hors résa 12 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>