force-app/main/default/objects/Account/fields/TrbNbrPlacesAcheteesHorsResa6Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbNbrPlacesAcheteesHorsResa6Mois__c</fullName>
    <label>Nbr places achetées hors résa 6 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>