force-app/main/default/objects/Account/fields/TrbPanierMoyenBillet12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrbPanierMoyenBillet12Mois__c</fullName>
    <label>Panier moyen billetterie 12 DM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>