force-app/main/default/objects/Account/fields/TrbPourcentAchatEnfantSup25__c.field-meta.xml
<CustomField>
    <fullName>TrbPourcentAchatEnfantSup25__c</fullName>
    <label>% tr bi tarif enf&gt;25% tot tr bi 12 DM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>