force-app/main/default/objects/Account/fields/TrcAcheteurConfiserie12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrcAcheteurConfiserie12Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acheteur confiserie sur les 12 DM</label>
    <type>Checkbox</type>
</CustomField>