force-app/main/default/objects/Account/fields/TrcAcheteurConfiserie3Mois__c.field-meta.xml
<CustomField>
    <fullName>TrcAcheteurConfiserie3Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acheteur confiserie sur les 3 DM</label>
    <type>Checkbox</type>
</CustomField>