force-app/main/default/objects/Account/fields/TrcAcheteurConfiserie6Mois__c.field-meta.xml
<CustomField>
    <fullName>TrcAcheteurConfiserie6Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acheteur confiserie sur les 6 DM</label>
    <type>Checkbox</type>
</CustomField>