force-app/main/default/objects/Account/fields/TrcCaConfiserie3Mois__c.field-meta.xml
<CustomField>
    <fullName>TrcCaConfiserie3Mois__c</fullName>
    <label>CA achat confiserie sur les 3 DM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>