force-app/main/default/objects/Account/fields/TrcCaConfiserie6Mois__c.field-meta.xml
<CustomField>
    <fullName>TrcCaConfiserie6Mois__c</fullName>
    <label>CA achat confiserie sur les 6 DM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>