force-app/main/default/objects/Account/fields/TrcCaDernierPanierConfiserie__c.field-meta.xml
<CustomField>
    <fullName>TrcCaDernierPanierConfiserie__c</fullName>
    <label>Montant dernier panier confiserie en €</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>