force-app/main/default/objects/Account/fields/TrcCaTotalConfiserie__c.field-meta.xml
<CustomField>
    <fullName>TrcCaTotalConfiserie__c</fullName>
    <label>CA total confiserie depuis entrée en bas</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>