force-app/main/default/objects/Account/fields/TrcDateDernAchatConfiserie__c.field-meta.xml
<CustomField>
    <fullName>TrcDateDernAchatConfiserie__c</fullName>
    <label>Date dernier achat confiserie</label>
    <type>DateTime</type>
</CustomField>