force-app/main/default/objects/Account/fields/TrcDatePremierAchat__c.field-meta.xml
<CustomField>
    <fullName>TrcDatePremierAchat__c</fullName>
    <label>TrcDatePremierAchat</label>
    <type>DateTime</type>
</CustomField>