force-app/main/default/objects/Account/fields/TrcNbrProdConfiserie12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrcNbrProdConfiserie12Mois__c</fullName>
    <label>Nbr de prod confis achetés sur les 12 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>