force-app/main/default/objects/Account/fields/TrcPanierMoyenConfiserie12Mois__c.field-meta.xml
<CustomField>
    <fullName>TrcPanierMoyenConfiserie12Mois__c</fullName>
    <label>Panier moyen confiserie 12 derniers mois</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>