force-app/main/default/objects/Account/fields/TreCaReservations12Mois__c.field-meta.xml
<CustomField>
    <fullName>TreCaReservations12Mois__c</fullName>
    <label>CA réservation sur les 12 derniers mois</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>