force-app/main/default/objects/Account/fields/TreCaTotal__c.field-meta.xml
<CustomField>
    <fullName>TreCaTotal__c</fullName>
    <label>CA réserv total depuis entrée en base</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>