force-app/main/default/objects/Account/fields/TreNbrFilms3D6Mois__c.field-meta.xml
<CustomField>
    <fullName>TreNbrFilms3D6Mois__c</fullName>
    <label>Nbr de films réservés 3D 6 DM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>