force-app/main/default/objects/Account/fields/TreNbrPlacesReservees12Mois__c.field-meta.xml
<CustomField>
    <fullName>TreNbrPlacesReservees12Mois__c</fullName>
    <label>Nbr de places réservées sur les 12 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>