force-app/main/default/objects/Account/fields/TreNbrPlacesReservees3Mois__c.field-meta.xml
<CustomField>
    <fullName>TreNbrPlacesReservees3Mois__c</fullName>
    <label>Nbr de places réservées sur les 3 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>