force-app/main/default/objects/Account/fields/TreNbrPlacesReservees6Mois__c.field-meta.xml
<CustomField>
    <fullName>TreNbrPlacesReservees6Mois__c</fullName>
    <label>Nbr de places réservées sur les 6 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>