force-app/main/default/objects/Account/fields/TreNbrPlNumeroReservees6Mois__c.field-meta.xml
<CustomField>
    <fullName>TreNbrPlNumeroReservees6Mois__c</fullName>
    <label>Nbr de places num réservées sur les 6 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>