force-app/main/default/objects/Account/fields/TypeParrainage__c.field-meta.xml
<CustomField>
    <fullName>TypeParrainage__c</fullName>
    <label>Type de parrainage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>