force-app/main/default/objects/Account/fields/TypeVoie__c.field-meta.xml
<CustomField>
    <fullName>TypeVoie__c</fullName>
    <label>Type de voie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABBAYE</fullName>
            </value>
            <value>
                <fullName>allée</fullName>
            </value>
            <value>
                <fullName>ALLEES</fullName>
            </value>
            <value>
                <fullName>ANCIEN CHE</fullName>
            </value>
            <value>
                <fullName>ANCIEN RTE</fullName>
            </value>
            <value>
                <fullName>ANSE</fullName>
            </value>
            <value>
                <fullName>ARCADE</fullName>
            </value>
            <value>
                <fullName>avenue</fullName>
            </value>
            <value>
                <fullName>BOIS</fullName>
            </value>
            <value>
                <fullName>BOUCLE</fullName>
            </value>
            <value>
                <fullName>boulevard</fullName>
            </value>
            <value>
                <fullName>BOURG</fullName>
            </value>
            <value>
                <fullName>CALE</fullName>
            </value>
            <value>
                <fullName>CAMP</fullName>
            </value>
            <value>
                <fullName>CAMPING</fullName>
            </value>
            <value>
                <fullName>CARRE</fullName>
            </value>
            <value>
                <fullName>CARREFOUR</fullName>
            </value>
            <value>
                <fullName>CARRIERE</fullName>
            </value>
            <value>
                <fullName>CAVEE</fullName>
            </value>
            <value>
                <fullName>CCAL</fullName>
            </value>
            <value>
                <fullName>CENTRE</fullName>
            </value>
            <value>
                <fullName>CHALET</fullName>
            </value>
            <value>
                <fullName>CHATEAU</fullName>
            </value>
            <value>
                <fullName>chaussée</fullName>
            </value>
            <value>
                <fullName>chemin</fullName>
            </value>
            <value>
                <fullName>CHEMINEMENT</fullName>
            </value>
            <value>
                <fullName>CHEMINS</fullName>
            </value>
            <value>
                <fullName>CHEZ</fullName>
            </value>
            <value>
                <fullName>cité</fullName>
            </value>
            <value>
                <fullName>CITES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>