force-app/main/default/objects/Account/fields/Ville__c.field-meta.xml
<CustomField>
    <fullName>Ville__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ville</label>
    <referenceTo>Commune__c</referenceTo>
    <relationshipLabel>Fiches Clients</relationshipLabel>
    <relationshipName>Fiches_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>